<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation__pin"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/tap_pin" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/tap_calendar" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/tap_chat" />
    <item
        android:id="@+id/navigation_tanstor"
        android:icon="@drawable/ic_g_translate_black_24dp"
        android:title="@string/tap_subject" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/tap_user" />
</menu>
