<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SCHEDULE.UI.ScheduleAddTravel"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/BLACK"
        android:text="@string/schedule_planPriod"
        />

    <TextView
        android:id="@+id/tv_travelPriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/colorTextGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMainGreen"
        />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/BLACK"
        android:text="@string/schedule_planName_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_enterTravelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/schedule_login_plan_enterName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/BLACK"
        android:text="@string/schedule_planLocation_title"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_choiceTravelLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <com.google.android.material.textfield.TextInputEditText

            android:clickable="true"
            android:focusable="true"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/schedule_login_plan_choiceLocal" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                />
        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerview_tavelLocalList"
        />
    <Button
        android:id="@+id/btn_add_travelPriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_plan_add"
        android:background="@color/colorMainGreen"
        />





</LinearLayout>