<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleOlympicInfoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/athletics"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp"
            android:text="2020 TOKYO OLYMPIC"
            android:textSize="34dp"
            android:textStyle="bold"
            android:textColor="@color/BLACK"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
            android:text="@string/schedule_olympic_info_title1"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="#7C7C7C"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
            android:text="@string/schedule_olympic_info_title2"
            android:textSize="20dp"
            android:textColor="#7C7C7C"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/round_olympic_info"
                    android:text="@string/schedule_olympic_info_olympic"
                    android:textColor="@color/colorWhiteGrey"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center|right"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round_olympic_info"
                    android:text="@string/schedule_olympic_info_paralympic"
                    android:textColor="@color/colorWhiteGrey"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center|right"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round_olympic_info"
                    android:text="@string/schedule_olympic_info_search"
                    android:textColor="@color/colorWhiteGrey"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center|right"
                    />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                android:layout_marginLeft="10dp"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/round_olympic_info"
                    android:text="@string/schedule_olympic_info_gameinfo"
                    android:textColor="@color/colorWhiteGrey"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center|right"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/round_olympic_info"
                    android:text="@string/schedule_olympic_info_event"
                    android:textColor="@color/colorWhiteGrey"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center|right"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>