<?xml version="1.0" encoding="utf-8"?>
<!-- 올림픽 경기 일정을 등록하기 위해 올림픽 시간표를 보여주는 페이지 .-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView

            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/tv_olympic_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/BLACK"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_olympicGamePlan"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/BLACK"
            />

    </LinearLayout>

<ScrollView
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:weightSum="1"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:context=".SCHEDULE.UI.ScheduleOlympicDailyScedule"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/round_gray"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule_olympicGametime"
            android:textSize="17dp"
            android:textColor="@color/BLACK"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#dddddd"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule_olympicGameType"
            android:textSize="17dp"
            android:textColor="@color/BLACK"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#dddddd"
            />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/schedule_olympicGameLocation"
            android:textSize="17dp"
            android:textColor="@color/BLACK"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#dddddd"
            />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/schedule_olympicBtnChoiceGame"
            android:textSize="17dp"
            android:textColor="@color/BLACK"
            android:gravity="center"
            android:layout_gravity="center"
            />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerview_olympicDailySchedule"
        />

</LinearLayout>

</ScrollView>

    <TextView
        android:id="@+id/tv_schedule_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_plan_add"
        android:textSize="20dp"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/round_gray"

        />

</LinearLayout>


