<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SCHEDULE.UI.ScheduleLoginActivity"
    android:orientation="vertical"
    android:background="@drawable/login_backgraund">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NOVA TRIP"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="@color/WHITE"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/tv_showTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:text="@string/schedule_login_guidebook"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/WHITE"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:background="@color/BLACK"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60dp"
        android:layout_height="wrap_content"
        android:text="login"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/WHITE"
        android:textSize="18dp"
        android:paddingVertical="10dp"
        />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_login_join"
            android:textStyle="bold"
            android:textColor="@color/WHITE"
            />
        <TextView
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:layout_width="1dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:background="@color/WHITE"
            />
        <TextView
            android:id="@+id/tv_ask"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_login_ask"
            android:textColor="@color/WHITE"
            />


    </LinearLayout>











</LinearLayout>